Revision history for Devel-FindPerl

{{$NEXT}}

0.008     2013-11-01 17:48:53 Europe/Amsterdam
          Always empty $ENV{PATH} before open2
          Append executable extension to expected tainted path

0.007     2013-10-24 14:32:54 Europe/Amsterdam
          Soften dependency on ExtUtils::Config
          Rewrite tests not to depend on Capture::Tiny
          Export perl_is_same
          Handle tainting better

0.006     2012-10-21 15:32:06 Europe/Amsterdam
          Cache the results of find_perl_interpreter
          Don't try absolute path twice

0.005     2012-10-06 00:14:49 Europe/Amsterdam
          Explicitly load File::Basename

0.004     2012-07-26 00:40:10 Europe/Bucharest
          Make sure myconfig is read in text-mode on Windows

0.003     2012-07-23 12:02:13 Europe/Bucharest
          Convert from pipe open to IPC::Open2

0.002     2012-07-12 18:46:33 Europe/Bucharest
          Get rid of Capture::Tiny dependency

0.001     2012-06-20 20:37:18 Europe/Amsterdam
          Initial release