@@ -1,6 +1,7 @@
 Revision history for Devel-FindPerl
 
 {{$NEXT}}
+          find_perl_interpreter now return an array
 
 0.008     2013-11-01 17:48:53 Europe/Amsterdam
           Always empty $ENV{PATH} before open2
